--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,6 @@ spring.flyway.baseline-on-migrate=true
 #spring.datasource.filters=stat,wall,log4j
 
 spring.datasource.druid.filters=stat,wall
-spring.datasource.druid.filter.wall.enabled=true
-
-spring.datasource.druid.filter.wall.config.comment-allow=true
+spring.datasource.druid.filter.wall.enabled=false
+spring.datasource.druid.filter.wall.config.comment-allow=false
 
